2002-07-12  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: [-removeAttributeFromClass] added method to be
	used by new menu item "Delete Outlet/Action".  Removed some
	NSLog statements.
	* GormClassManager.[hm]: Added methods to support adding and
	replacing actions and outlets.
	* GormDocument.m: Modified data source methods to use the methods
	added to the class manager to edit the contents of the class list.
	* GormOutlineView.[hm]: Added methods to add actions and outlets
	to the data source from the outline view.  Also changed the drawing
	code so that the outlet/action being edited doesn't shift when
	clicked.

2002-07-11  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added stubs for two new method to add actions
	and outlets based on classname.
	* GormDocument.m: Added logic set the name in the data source methods.
	* GormOutlineView.m: Override [-editColumn:row:withEvent:select:]
	to draw correcty for the outlet/actions.
	* GormOutlineView.h: Move GormOutletActionHolder to header so it
	can be used by the data source.

2002-07-09  Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Added new menu item and method to add outlet/action
	-[Gorm addAttributeToClass:]
	* GormDocument.m: Added new method which gets called by the one
	in Gorm.m and passes control to the classesView.
	* GormOutlineView.m added -[GormOutlineView addAttributeToClass]
	to add either an outlet or an action depending on what type 
	is currently open.  Currently it only adds the name and doesn't
	modify the datasource.  The next version will.
	
2002-07-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormOutlineView.m -[drawRow:] Added logic to draw inverse
	image of the outlet or action button to visually indicate which
	is being edited in the outline view.
	* GormOutlineView.h: Added typedef to indicate whether actions or
	outlets are being edited.
	* Images/GormActionSelected.tiff: Added